<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PicabusActivity!</string>
    <string name="app_name">Picabus</string>
    <string name="menu_camera_button">take a picture</string>
    <string name="menu_ft_search_button">search</string>
    <string name="menu_history_button">history</string>
    <string name="ft_submit_button">submit</string>
    <string name="menu_aboutus_button">about us</string>
        <string name="menu_mypicabus_button">my picabus</string>
    <string name="no_lines">no bus lines were taken</string>
    <string name="pref_timeinterval_instruction">Please choose time interval for bus arrivals:</string>
    <string name="manual_search_instruction">Please enter the requested bus line</string>
    <string name="aboutus_title">About us</string>
    <string name="aboutus_text">Nowadays bus passengers dont have an easy way to know when the bus they are waiting for is about to arrive. \nPICABUS is an enjoyable and easy to use way for checking buses schedule -just point and shoot!</string>
    <string name="cancel_popup">Cancel</string>
    <string name="choose_bus_destination">Please choose your bus destination:</string>
    <string name="choose_line_number">Please choose a bus line number: </string>
    <string name="company_icon">Bus company icon</string>
    <string name="estimated_arrival_times">Estimated arrival times: </string>
    <string name="icon_bus_lines_list">icon</string>
    <string name="getroute_icon">Get route</string>
    <string name="no_eta">Bus time arrivals are not available</string>
    <string name="notify_pref_txt">Please choose time to be notified before bus arrival:</string>
    <string name="clock_icon">clock_icon</string>
    <string name="empty_result">Sorry, no information was found for the requested line number</string>
    <string name="goto_menu">Back to main menu</string>
    <string name="click_to_be_notified">Click an arrival time to be notified before bus arrives, checkin on bus and get its route and current location!</string>
    <string name="dont_login_facebook">Login later, go to PICABUS!</string>
    <string name="share_title">Share Picabus with friends..</string>
    <string name="share_message">What\'s up? \nCheck out Picabus! \nBest public transportation application ever!! \nhttp://picabusapp.appspot.com</string>
    <string name="post_facebook_inst">Click to Post to facebook about picabus</string>
    <string name="histroy_headline">Recently searched bus lines</string>
    <string name="history_empty">No recent searches</string>
    <string name="checkin_msg">Thank you for checking in! \nYour location will be shared with others until you checkout!\n(each report gives you %d points)</string>
    <string name="checkout_msg">Thank you for checkout! \nYou have earned %d points</string>
	<string name="report_txt_msg">Thank you for the report! \nYou have "%d points now!</string>
	<string name="report_failed_msg">Attemp to report failed.\nPlease try again later&#8230; </string>
	<string name="not_allowed_enter_trip">Please checkout from your trip before entering other trips</string>
	<string name="send_report">Send Report</string>
	<string name="report_hint">Describe your trip..</string>
	<string name="checkin_exp">Click to checkin when you go on the bus. \nYou will be rewarded with Picabus points</string>
	<string name="manual_search_hint">Enter bus line number..</string>
	<string name="notification_text">Notification</string>
	<string name="trip_reports">Trip Reports</string>
	<string name="notify_me">Notify Me!</string>
	<string name="cancel_notification">Cancel Notification</string>
	<string name="my_trip_status">My Trip Status</string>
	<string name="map_exp">View bus route and it\'s current location</string>
	<string name="short_checkin_exp">Checkin/Checkout from this trip</string>
	<string name="Checkin_bus_btn_text">Checkin bus</string>
	<string name="empty_text"></string>
	<string name="login_text">Login to Picabus using \'\My picabus\'\ page!</string>
	<string name="version_about_us">Version 1.0 (Beta)</string>
    
</resources>