<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/menu_background" >
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical" >

                            <View
         android:layout_width="fill_parent"
         android:layout_height="125dip"
 	/>
            
    <ImageButton
        android:id="@+id/button_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:background="@null"
        android:contentDescription="@string/menu_camera_button"
        android:src="@drawable/button_camera_s"
        android:text="@string/menu_camera_button" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:weightSum="4" >

        <ImageButton
            android:id="@+id/button_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/menu_ft_search_button"
            android:src="@drawable/button_search_s"
            android:text="@string/menu_ft_search_button" />

        <ImageButton
            android:id="@+id/button_history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/menu_history_button"
            android:src="@drawable/button_history_s"
            android:text="@string/menu_history_button" />

        <ImageButton
            android:id="@+id/button_aboutus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/menu_aboutus_button"
            android:src="@drawable/button_aboutus_s"
            android:text="@string/menu_aboutus_button" />
        
        <ImageButton
            android:id="@+id/button_mypicabus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@null"
            android:contentDescription="@string/menu_mypicabus_button"
            android:src="@drawable/button_mypicabus_s"
            android:text="" />
    </LinearLayout>

                        <View
         android:layout_width="fill_parent"
         android:layout_height="18dip"
 />
            
            
</LinearLayout>

        <SlidingDrawer
        android:id="@+id/SlidingDrawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:content="@+id/contentLayout"
        android:handle="@+id/slideButton"
        android:orientation="vertical"
		 >

        <Button
            android:id="@+id/slideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_icon_up" >

        </Button>

        
        
        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
             >

        <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textColor="@color/app_blue"
        android:textStyle="bold"
        android:paddingBottom="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
                
    <TextView
        android:id="@+id/textView1"
 		android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:padding="7dp"
        android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
        android:background="@color/app_blue"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:gravity="left|center"
        android:text="@string/pref_timeinterval_instruction"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
        android:layout_gravity="right"
    android:id="@+id/SpinnerTimeInterval"
    />
        
                        <View
         android:layout_width="fill_parent"
         android:layout_height="38dip"
 />
                        
            <TextView
        android:id="@+id/textView2"
 		android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:padding="7dp"
        android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
        android:background="@color/app_blue"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:gravity="left|center"
        android:text="@string/notify_pref_txt"
        android:textAppearance="?android:attr/textAppearanceMedium" />
            

        
   <Spinner
   	android:id="@+id/SpinnerNotification"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
        android:layout_gravity="right"

    />
                 
        </LinearLayout>
        
    </SlidingDrawer>


</FrameLayout>