<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/button_camera"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        android:background="@drawable/picabus_splash"
        android:contentDescription="@string/menu_camera_button"
        android:src="@drawable/button_camera_s"
        android:text="@string/menu_camera_button" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3" >

        <ImageButton
            android:id="@+id/button_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:contentDescription="@string/menu_ft_search_button"
            android:src="@drawable/button_search_s"
            android:text="@string/menu_ft_search_button" />

        <ImageButton
            android:id="@+id/button_history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:contentDescription="@string/menu_history_button"
            android:src="@drawable/button_history_s"
            android:text="@string/menu_history_button" />

        <ImageButton
            android:id="@+id/button_aboutus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:contentDescription="@string/menu_aboutus_button"
            android:src="@drawable/button_aboutus_s"
            android:text="@string/menu_aboutus_button" />
    </LinearLayout>

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
 >
    </LinearLayout>
            
            
</LinearLayout>

        <SlidingDrawer
        android:id="@+id/SlidingDrawer"
        android:layout_weight="5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:content="@+id/contentLayout"
        android:handle="@+id/slideButton"
        android:orientation="vertical"
        android:padding="10dip" >

        <Button
            android:id="@+id/slideButton"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@drawable/settings_icon_up" >
        </Button>

        
        
        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/preferences_bg"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dip" >

            
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_timeinterval_instruction"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3" >
    
    <NumberPicker
        android:id="@+id/numberPicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/button_submit_ft"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="2"
        android:contentDescription="Set"
        android:src="@drawable/submit_ft_icon"
        android:text="Set" />
    
       </LinearLayout>
        </LinearLayout>
        
        
        
        
        
    </SlidingDrawer>


</FrameLayout>